# PhotonCamera

./: .gitmodules  README.md  settings.gradle
app/: build.gradle  version.properties
app/src/androidTest/java/com/particlesdevs/PhotonCamera/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/ui/: imgui.glsl
app/src/main/cpp/: CMakeLists.txt  Camera.cpp  Camera.h  Camera2Api.cpp  Camera2Api.h  CameraNDK.cpp  CameraNDK.h  gl.h  imguiConf.h  main.cpp  main.h
app/src/main/cpp/Processing/: Processor.cpp  ProcessorQueue.cpp
app/src/main/cpp/UI/: Demos.cpp  Gallery.cpp  Preview.cpp  Settings.cpp  Texture.cpp  UiManager.cpp  image_loader.cpp
app/src/main/cpp/Util/: EglPlate.cpp  FileManager.cpp  Widgets.cpp  exiv_wrapper.cpp  export_avif.cpp  export_jxl.cpp  import_avif.cpp  import_jxl.cpp
app/src/main/cpp/Util/DngWriter/: CustomMatrix.h  DngMatrixCalc.cpp  DngStacker.cpp
app/src/main/cpp/Util/libtiff/: tiff.h
app/src/main/cpp/debug/: CMakeLists.txt  main.cpp  main.h
app/src/main/cpp/impl/: imgui_impl_android.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3_android.cpp  imgui_impl_opengl3_android.h
app/src/main/cpp/inc/: CameraParameters.h  Demos.h  EglPlate.h  FileManager.h  Gallery.h  Preview.h  ProcessingParameters.h  Processor.h  ProcessorQueue.h  Settings.h  Texture.h  UiHandler.h  UiManager.h  Widgets.h  exiv_wrapper.h  export_avif.h  export_jxl.h  import_avif.h  import_jxl.h  logs.h  main.h  stb_image.h
app/src/main/java/com/particlesdevs/PhotonCamera/: Camera2Api.kt  MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/particlesdevs/PhotonCamera/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
